@@ -13,7 +13,11 @@
 
 package org.openmetadata.service.notifications.recipients.strategy.impl;
 
-import java.util.Collections;
+import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -55,30 +59,71 @@ public class ExternalRecipientResolver implements RecipientResolutionStrategy {
 
   private Set<Recipient> resolveExternalRecipients(
       SubscriptionAction action, SubscriptionDestination destination) {
+    Set<Recipient> recipients;
     try {
-      SubscriptionDestination.SubscriptionType notificationType = destination.getType();
-
-      // For EMAIL notifications, receivers are email addresses
-      if (notificationType == SubscriptionDestination.SubscriptionType.EMAIL) {
-        if (action.getReceivers() == null || action.getReceivers().isEmpty()) {
-          return Collections.emptySet();
-        }
-        return action.getReceivers().stream()
-            .map(EmailRecipient::new)
-            .collect(Collectors.toUnmodifiableSet());
-      }
-
-      // For webhook types, extract custom webhook config and create webhook recipients
-      Webhook webhook = JsonUtils.convertValue(destination.getConfig(), Webhook.class);
-      if (webhook == null || webhook.getEndpoint() == null) {
-        return Collections.emptySet();
-      }
-      return Set.of(new WebhookRecipient(webhook));
-
-    } catch (Exception e) {
+      recipients =
+          destination.getType() == SubscriptionDestination.SubscriptionType.EMAIL
+              ? resolveEmailRecipients(action)
+              : resolveWebhookRecipients(action, destination);
+    } catch (IllegalArgumentException e) {
       LOG.error("Failed to resolve external recipients", e);
-      return Collections.emptySet();
+      recipients = Set.of();
     }
+    return recipients;
+  }
+
+  private Set<Recipient> resolveEmailRecipients(SubscriptionAction action) {
+    Set<Recipient> recipients = Set.of();
+    if (action != null && !nullOrEmpty(action.getReceivers())) {
+      recipients =
+          action.getReceivers().stream()
+              .map(EmailRecipient::new)
+              .collect(Collectors.toUnmodifiableSet());
+    }
+    return recipients;
+  }
+
+  private Set<Recipient> resolveWebhookRecipients(
+      SubscriptionAction action, SubscriptionDestination destination) {
+    Webhook webhook = JsonUtils.convertValue(destination.getConfig(), Webhook.class);
+    Set<Recipient> recipients = configuredEndpoint(webhook);
+    if (action != null && !nullOrEmpty(action.getReceivers())) {
+      recipients =
+          action.getReceivers().stream()
+              .map(receiver -> webhookForReceiver(webhook, receiver))
+              .flatMap(Optional::stream)
+              .map(WebhookRecipient::new)
+              .collect(Collectors.toUnmodifiableSet());
+    }
+    return recipients;
+  }
+
+  private Set<Recipient> configuredEndpoint(Webhook webhook) {
+    return webhook == null || webhook.getEndpoint() == null
+        ? Set.of()
+        : Set.of(new WebhookRecipient(webhook));
+  }
+
+  /**
+   * Empty for a receiver that is not a usable endpoint. Receivers are admin-typed strings, so one
+   * unsubstituted template or stray space must not discard the valid receivers alongside it.
+   */
+  private Optional<Webhook> webhookForReceiver(Webhook webhook, String receiver) {
+    Optional<Webhook> configured = Optional.empty();
+    try {
+      if (nullOrEmpty(receiver) || receiver.isBlank()) {
+        LOG.warn("Skipping blank webhook receiver");
+      } else {
+        configured = Optional.of(copyOf(webhook).withEndpoint(new URI(receiver)));
+      }
+    } catch (URISyntaxException exception) {
+      LOG.warn("Skipping webhook receiver '{}': {}", receiver, exception.getMessage());
+    }
+    return configured;
+  }
+
+  private Webhook copyOf(Webhook webhook) {
+    return webhook == null ? new Webhook() : JsonUtils.convertValue(webhook, Webhook.class);
   }
 
   @Override
